updated and optimised images

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -5,7 +5,7 @@ $mainColor: #3385ff;
 $lightColor:#f4f4f4;
 $darkColor: #333;
 $mediumColor:#ccc;
-$bg-img: URL('../img/mouse.jpg');
+$bg-img: URL('../img/Optimized-mouse.jpg');
 
 
 
