--- a/scss/main.scss
+++ b/scss/main.scss
@@ -348,7 +348,7 @@ img{
   }
   //scale img
   &:hover &-img{
-      transform: scale(1.3);
+      transform: scale(1.1);
   }
   &:hover &-text{
     opacity: 1;
@@ -373,7 +373,7 @@ img{
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: auto;
     height: 100%;
     line-height: 0;
     object-fit: cover;
